--- a/UIAlertController/Base.lproj/Main.storyboard
+++ b/UIAlertController/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="PhP-vV-pOW">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="dkh-Sg-zls">
-                                <rect key="frame" x="204" y="189" width="193" height="29"/>
+                                <rect key="frame" x="204" y="233" width="193" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="28" id="DDl-RR-fyq"/>
                                     <constraint firstAttribute="width" constant="193" id="a4L-ca-boY"/>
@@ -28,7 +28,7 @@
                                 </segments>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RhB-Pu-AJY">
-                                <rect key="frame" x="204" y="272" width="193" height="28"/>
+                                <rect key="frame" x="204" y="316" width="193" height="28"/>
                                 <color key="backgroundColor" red="0.94901960780000005" green="0.42352941179999998" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="start">
                                     <color key="titleColor" red="0.20000000000000001" green="0.59999999999999998" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
@@ -44,23 +44,109 @@
                                     <action selector="start:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XNT-X9-VhB"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RCv-Ej-C5O">
+                                <rect key="frame" x="204" y="394" width="193" height="28"/>
+                                <color key="backgroundColor" red="0.94901960780000005" green="0.42352941179999998" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="touchID">
+                                    <color key="titleColor" red="0.20000000000000001" green="0.59999999999999998" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="5I3-HL-6Pn" kind="show" id="BxC-z9-PAD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="dkh-Sg-zls" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="169" id="3I7-2b-P16"/>
                             <constraint firstItem="RhB-Pu-AJY" firstAttribute="centerX" secondItem="dkh-Sg-zls" secondAttribute="centerX" id="4rX-s6-JG8"/>
+                            <constraint firstItem="RhB-Pu-AJY" firstAttribute="width" secondItem="RCv-Ej-C5O" secondAttribute="width" id="B0x-wE-ohs"/>
                             <constraint firstItem="RhB-Pu-AJY" firstAttribute="height" secondItem="dkh-Sg-zls" secondAttribute="height" id="E9p-mf-cfd"/>
                             <constraint firstItem="RhB-Pu-AJY" firstAttribute="width" secondItem="dkh-Sg-zls" secondAttribute="width" id="L0U-Nj-or1"/>
                             <constraint firstItem="RhB-Pu-AJY" firstAttribute="top" secondItem="dkh-Sg-zls" secondAttribute="bottom" constant="55" id="OXl-et-O0H"/>
+                            <constraint firstItem="RCv-Ej-C5O" firstAttribute="top" secondItem="RhB-Pu-AJY" secondAttribute="bottom" constant="50" id="aWW-GG-ACV"/>
+                            <constraint firstItem="RhB-Pu-AJY" firstAttribute="height" secondItem="RCv-Ej-C5O" secondAttribute="height" id="ceB-XI-otT"/>
                             <constraint firstAttribute="centerX" secondItem="dkh-Sg-zls" secondAttribute="centerX" id="q5Q-tG-L3M"/>
+                            <constraint firstItem="RhB-Pu-AJY" firstAttribute="centerX" secondItem="RCv-Ej-C5O" secondAttribute="centerX" id="u0E-eS-xMz"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Sm7-4R-zRD"/>
                     <connections>
                         <outlet property="seguement" destination="dkh-Sg-zls" id="Dgw-aB-YPu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1092" y="239"/>
+        </scene>
+        <!--TOUCHID-->
+        <scene sceneID="aM1-ml-Aeg">
+            <objects>
+                <viewController title="TOUCHID" id="5I3-HL-6Pn" customClass="touchIDViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="caf-5a-uAY"/>
+                        <viewControllerLayoutGuide type="bottom" id="6N4-Dk-eXh"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8en-oO-KFT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gkp-RD-sW9">
+                                <rect key="frame" x="204" y="251" width="193" height="28"/>
+                                <color key="backgroundColor" red="0.94901960780000005" green="0.42352941179999998" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="193" id="JCM-Ql-8Lx"/>
+                                    <constraint firstAttribute="height" constant="28" id="Vwv-gY-bW2"/>
+                                </constraints>
+                                <state key="normal" title="验证">
+                                    <color key="titleColor" red="0.20000000000000001" green="0.59999999999999998" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="touchIDClick:" destination="5I3-HL-6Pn" eventType="touchUpInside" id="UPh-f7-MlI"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Gkp-RD-sW9" firstAttribute="top" secondItem="caf-5a-uAY" secondAttribute="bottom" constant="187" id="a6f-jd-2c3"/>
+                            <constraint firstAttribute="centerX" secondItem="Gkp-RD-sW9" secondAttribute="centerX" id="k19-gM-wId"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fct-Lf-S7T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1750" y="229"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="0gh-RB-KWm">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PhP-vV-pOW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jha-gB-m7C">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="kwY-V3-HQH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3x4-6b-l2g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="162" y="-454"/>
         </scene>
     </scenes>
 </document>
